# astepcooler

./: CMakeLists.txt  README.md  torque_manager.c  torque_manager.h
src/: astepcooler_test.c  astepcooler_test.h  astepcooler_test.h.in  int_pi_controller.c  int_pi_controller.h  rk4solver.c  rk4solver.h  thermal_model.c  thermal_model.h  thermal_model_estimator.c  thermal_model_estimator.h  thermal_model_overload_predictor.c  thermal_model_overload_predictor.h  thermal_model_state_space.c  thermal_model_state_space.h  torque_manager.c  torque_manager.h
